--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^0.21.1",
     "expo": "~41.0.1",
     "expo-constants": "~10.1.3",
+    "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
+    "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
